fixed about page rendering white space on bottom

--- a/src/App.css
+++ b/src/App.css
@@ -33,7 +33,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding-bottom: 50px;
 }
 
 .contact {
